[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17.2"
tokio-tungstenite = "*"
async-trait = "0.1.53"
lazy_static = "1.4.0"
log = "0.4.17"
env_logger = "0.9.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
config = { version = "0.13.1", features = ["toml"] }
futures-util = "0.3.21"
regex = "1.5.5"
visdom = { version = "0.5.2", features = ["text"] }
snafu = "0.7.1"
sled = "0.34.7"