[package]
name = "bot"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "rustls-tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tungstenite = "0.17.2"
tokio-tungstenite = "*"
async-trait = "0.1.53"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
config = { version = "0.13.1", features = ["toml"] }
futures-util = "0.3.21"
regex = "1.5.5"
visdom = { version = "0.5.2", features = ["text"] }
thiserror = "1.0.31"
anyhow = "1.0.57"
sled = "0.34.7"
url = "2.2.2"
nanoid = "0.4.0"
pretty_env_logger = "0.4.0"
human_bytes = { version = "0.3", features = ["fast"] }
futures = "0.3.21"
imageproc = "0.23.0"
image = "0.24.4"